--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,13 @@
-spring.h2.console.enabled=true
+spring.datasource.url= jdbc:mysql://localhost:3306/premium
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+
 spring.jpa.hibernate.ddl-auto=create-drop
 
-logging.level.org.hibernate.SQL=debug
-
 spring.template.cache=false
+
+server.contextPath=/app
+server.port=9090
