--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,10 @@
             <!--<scope>provided</scope>-->
         </dependency>
         <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+        </dependency>
+        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
